the menu slides to the left now

--- a/CSS/index.css
+++ b/CSS/index.css
@@ -79,6 +79,12 @@
     opacity: 1;
   }
 }
+.menu--close {
+  display: block;
+  width: 0;
+  overflow: hidden;
+  transition: width 1s;
+}
 .articles {
   margin-top: 95px;
 }
