--- a/Article/Article.less
+++ b/Article/Article.less
@@ -27,6 +27,7 @@
     position: absolute;
     top: 10px;
     right: 10px;
+    // transition: top 1s. right 1s;
   }
 
   .expandButton {
@@ -43,8 +44,24 @@
 
 .article-open {
   height: 400px;
+  transition: height 1s;
 }
 
+.article-close {
+  height: 50px;
+  transition: height 1s;
+}
 
-
-
+.read {
+  display: none;
+}
+.readButton {
+  position: absolute;
+  bottom: 0;
+  left: 40%;
+  font-size: 12px;
+  color: grey;
+  cursor: pointer;
+  transform: translate(-50%);
+  background-color: white;
+}
